[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyruijie"
version = "0.1.0"
description = "Python client library for Ruijie/Reyee Cloud-managed networking"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [
    { name = "Daniel Perez" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
keywords = [
    "ruijie",
    "reyee",
    "networking",
    "cloud",
    "network-management",
]
dependencies = [
    "httpx>=0.27,<1",
    "pydantic>=2.0,<3",
]

[project.urls]
Homepage = "https://github.com/dannielperez/pyruijie"
Repository = "https://github.com/dannielperez/pyruijie"
Documentation = "https://github.com/dannielperez/pyruijie#readme"
Issues = "https://github.com/dannielperez/pyruijie/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "respx>=0.22",
    "pytest-cov>=5.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/pyruijie"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
